stopped body overflowing

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1,86 +1,100 @@
+body {
+    overflow: hidden;
+}
+
 .box {
-  margin: auto;
-  margin-top: 12em;
-  width: 30%;
-  border: 5px solid Black;
-  padding: 10px;
-  border-radius: 15px;
-  text-align:center;
-  color: white;
-  background-color: #626161;
-  /* height: 15em; */
+    margin: auto;
+    margin-top: 12em;
+    width: 30%;
+    border: 5px solid Black;
+    padding: 10px;
+    border-radius: 15px;
+    text-align: center;
+    color: white;
+    background-color: #626161;
+    /* height: 15em; */
 }
 
 .margin {
     margin: 7px;
 }
 
-#myCanvas {
-  background-image: url("../assets/Background.png");
+#game {
+    width: 3840px;
+    height: 2160px;
+/*    position: relative;*/
+    margin: auto;
+    border: 1px solid black;
+    overflow: hidden;
+    background-image: url("../assets/Background.png");
 }
 
 .Homebutton {
-  padding: 0.5em 0.5em;
-  font-size: 24px;
-  cursor: pointer;
-  outline: none;
-  color: white;
-  background-color: #53A631;
-  border: none;
-  border-radius: 15px;
+    padding: 0.5em 0.5em;
+    font-size: 24px;
+    cursor: pointer;
+    outline: none;
+    color: white;
+    background-color: #53A631;
+    border: none;
+    border-radius: 15px;
 }
 
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .topnav {
-  overflow: hidden;
-  background-color: #626161;
+    overflow: hidden;
+    width: 100%;
+    background-color: #626161;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
-
-topnav a:not(:first-child) {
-}
-
-
 
 .topnav a.active {
-  background-color: #53A631;
-  color: white;
+    background-color: #53A631;
+    color: white;
 }
 
 .topnav .icon {
-  display: none;
+    display: none;
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
